--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- HERO WITH VIDEO BACKGROUND -->
     <header id="hero">
         <video autoplay muted loop playsinline id="video-background">
-            <source src="background-loop.mp4" type="video/mp4" />
+            <source src="video/Bgvideo.mp4" type="video/mp4" />
             Your browser does not support the video tag.
         </video>
 
